fix whitespace right

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,11 @@
 
 body {
 
-  padding: 0;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
  
 
