--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,6 +8,8 @@
     align-items: center;
     flex-direction: column;
     padding-top: 10px;
+    position: sticky;
+   
    
   }
   
