--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -29,7 +29,7 @@ video{
  
 }
 
-.startbutton{
+.startbutton {
   background-color: #04AA6D; 
   border: none;
   color: white;
@@ -75,7 +75,7 @@ h5{
 
 .aboutUs{
   background-color: rgb(249, 216, 209);
-  padding: 350px;
+  padding: 300px;
  
  
 }
@@ -106,30 +106,28 @@ s
 
 .hamburgerMonth{ 
   background-color: black;
-  img {
+img {
     width: 35%; 
-    height: 500px; 
+    height: 450px; 
     margin: 0; 
-    padding: 7px;
-    border-radius: 8%;
-  }
+    padding: 60px;
+  
+ }
 }
 
 .hamburgerMonth p{
   font-size: 25px;
-  text-align: center;
+  margin-left: 40%;
   color: white;
-
-  
+  position: relative; 
+  top: -400px;
 }
 
 .hamburgerMonth h1{
-  
+text-align: center;
   font-size: 40px;
-  text-align: center;
-  color: white;
-  padding: 20px;
- 
-  
+ padding: 30px;
+  color:white;
+
 }
 
